@@ -1,3 +1,6 @@
+2008-07-14  Dmitry Dulepov  <dmitry@typo3.org>
+
+	* Fixed bug #8566: Unable to match TS condition when variable is not set
 
 2008-07-14  Martin Kutschker  <masi@typo3.org>
 
